--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<module>server</module>
 		<module>client</module>
 		<module>consoleclient</module>
+		<module>master</module>
 	</modules>
 
 </project>
